# ls012b7dd06_esp32

./: .gitmodules  README.md
main/: CMakeLists.txt  main.c
